Subo CRUD funcional sin Editar

--- a/Proyecto_Seguimiento/app_aprendiz/templates/app_aprendiz/curso.html
+++ b/Proyecto_Seguimiento/app_aprendiz/templates/app_aprendiz/curso.html
@@ -9,11 +9,78 @@ Cursos
 
 {% block titulo %} Cursos SENA {% endblock %}
 
-{% block descripcion %} Listados de Cursos {% endblock %}
+{% block descripcion %} Listados de cursos {% endblock %}
 
 
 
 
 {% block contenido %}
+
+
+<div class="card-hearder">
+  <a
+    name=""
+    id=""
+    class="btn btn-success"
+    href="{% url 'crear_curso' %}"
+    role="button"
+    >Agregar curso</a
+  >
+  
+</div>
+
+{% for Cursos in cursos %}
+
+<div
+  class="table-responsive"
+>
+  <table
+    class="table table-primary"
+  >
+    <thead>
+      <tr>º
+        <th scope="col">ID Curso</th>
+        <th scope="col">ID Aprendiz</th>
+        <th scope="col">Curso</th>
+        <th scope="col">Acciones</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr class="">
+        <td scope="row">{{ Cursos.id_curso }}</td>
+        <td>{{ Cursos.id_aprendiz }}</td>
+        <td>{{ Cursos.curso }}</td>
+
+        <td> <a
+          name=""
+          id=""
+          class="btn btn-info"
+          href="{% url 'editar_curso' Cursos.id_curso %}"
+          role="button"
+          >Editar</a
+        > 
+        
+        
+        / 
+      
+      <a
+        name=""
+        id=""
+        class="btn btn-danger"
+        href="{% url 'eliminar_curso' Cursos.id_curso %}"
+        role="button"
+        >Eliminar</a
+      >
+      </td>
+
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+{% endfor %}
+
+
 
 {% endblock %}
