--- a/Proyecto_Seguimiento/app_aprendiz/templates/app_aprendiz/editar_aprendiz.html
+++ b/Proyecto_Seguimiento/app_aprendiz/templates/app_aprendiz/editar_aprendiz.html
@@ -3,35 +3,25 @@
 {% load static %}
 
 {% block titulo-document %}
-Aprendiz
+Aprendices
 {% endblock %}
 
-
-{% block descripcion %} Editar Aprendiz {% endblock %}
-
+{% block descripcion %}
+Editar Aprendiz
+{% endblock %}
 
 {% block contenido %}
-
-
-<form method="Post">
+<form method="post">
     {% csrf_token %}
     {{ formulario_aprendiz }}
 
-
+    <button type="submit" class="btn btn-primary">Enviar</button>
     <a
-        name=""
-        id=""
-        class="btn btn-primary"
+        class="btn btn-secondary"
         href="{% url 'aprendices' %}"
-        role="submit"
-        >Enviar</a
+        role="button"
     >
-    
-    <button type="submit">hola</button>
-
-
+        Volver
+    </a>
 </form>
-
-
-
 {% endblock %}
