--- a/Proyecto_Seguimiento/app_aprendiz/templates/app_aprendiz/editar_calificacion.html
+++ b/Proyecto_Seguimiento/app_aprendiz/templates/app_aprendiz/editar_calificacion.html
@@ -6,32 +6,22 @@
 Calificaciones
 {% endblock %}
 
-
-{% block descripcion %} Editar Calificacion {% endblock %}
-
+{% block descripcion %}
+Editar Calificacion
+{% endblock %}
 
 {% block contenido %}
-
-
-<form method="Post">
+<form method="post">
     {% csrf_token %}
     {{ formulario_calificacion }}
 
-
+    <button type="submit" class="btn btn-primary">Enviar</button>
     <a
-        name=""
-        id=""
-        class="btn btn-primary"
+        class="btn btn-secondary"
         href="{% url 'calificaciones' %}"
-        role="submit"
-        >Enviar</a
+        role="button"
     >
-    
-    <button type="submit">hola</button>
-
-
+        Volver
+    </a>
 </form>
-
-
-
 {% endblock %}
